# PixelUpdater

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  changelog.md  release.json  settings.gradle.kts
.github/workflows/: ci.yml  release.yml  test_tag_annotation.yml  update-links.yml
app/: build.gradle.kts
app/module/: customize.sh  post-fs-data.sh  uninstall.sh
app/module/updates/release/: changelog.txt  info.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: flash_inactive.sh
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/pixelupdater_selinux/: CMakeLists.txt
app/src/main/cpp/pixelupdater_selinux/src/: main.cpp
app/src/main/java/com/github/pixelupdater/pixelupdater/: MainApplication.kt  Notifications.kt  Permissions.kt  Preferences.kt
app/src/main/java/com/github/pixelupdater/pixelupdater/dialog/: OtaServerUrlDialogFragment.kt  OtaUrlDialogFragment.kt
app/src/main/java/com/github/pixelupdater/pixelupdater/extension/: ThrowableExtensions.kt
app/src/main/java/com/github/pixelupdater/pixelupdater/settings/: SettingsActivity.kt  SettingsFragment.kt  SettingsViewModel.kt
app/src/main/java/com/github/pixelupdater/pixelupdater/updater/: OtaPaths.kt  UpdateEngineError.kt  UpdateEngineStatus.kt  UpdaterJob.kt  UpdaterService.kt  (+1 more)
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notifications.xml
app/src/main/res/values/: colors.xml  strings.xml  strings_notranslate.xml  themes.xml
app/src/main/res/xml/: preferences_root.xml
gradle/: libs.versions.toml  verification-metadata.xml
(+3 files in other folders)
